--- a/Project_2/project_luther.ipynb
+++ b/Project_2/project_luther.ipynb
@@ -12758,7 +12758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -12767,7 +12767,7 @@
        "'\\nClayton Kershaw\\nStarting Pitcher\\n'"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12777,7 +12777,7 @@
     "rows=[row for row in tables[0].find_all('tr')]\n",
     "\n",
     "# Just want to look at 1st 20 rows for now\n",
-    "rows=rows[1:10000000]\n",
+    "rows=rows[1:]\n",
     "\n",
     "salaries={}\n",
     "for row in rows:\n",
@@ -12792,7 +12792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -12809,6 +12809,26 @@
     "for player in salaries:\n",
     "    count = count + 1\n",
     "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(salaries)"
    ]
   },
   {
