saves and final

--- a/Project_2/Project_luther_Final.ipynb
+++ b/Project_2/Project_luther_Final.ipynb
@@ -6291,6 +6291,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.603378890167\n",
+      "Adj R^2 is: 0.563142\n"
+     ]
+    }
+   ],
+   "source": [
+    "rcv = RidgeCV(cv=10)\n",
+    "rcv.fit(x, y)\n",
+    "print(rcv.score(x, y))\n",
+    "print('Adj R^2 is: %f'%adj_r2_score(rcv, y, rcv.predict(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1134,
    "metadata": {},
    "outputs": [
