--- a/Project_3/project_3_LogisticRegression.ipynb
+++ b/Project_3/project_3_LogisticRegression.ipynb
@@ -17,7 +17,8 @@
    },
    "outputs": [],
    "source": [
-    "ccdf=pd.read_pickle('ccdf.pkl')"
+    "with open(\"ccdf2.pkl\", 'rb') as picklefile: \n",
+    "    ccdf2 = pickle.load(picklefile)"
    ]
   }
  ],
