--- a/Project_3/project_3_SVM.ipynb
+++ b/Project_3/project_3_SVM.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -48,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "with open(\"ccdf2.pkl\", 'rb') as picklefile: \n",
+    "with open(\"ccdf3.pkl\", 'rb') as picklefile: \n",
     "    ccdf = pickle.load(picklefile)"
    ]
   },
