--- a/Project_4/Zillow_api.ipynb
+++ b/Project_4/Zillow_api.ipynb
@@ -15,12 +15,14 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "address = '12526 54th dr se Snohomish WA'\n",
     "zipcode = '98296'\n",
-    "zillow_data = ZillowWrapper('X1-ZWz1g9dw5xnm6j_8469v')\n",
+    "zillow_data = ZillowWrapper()\n",
     "deep_search_response = zillow_data.get_deep_search_results(address, zipcode)"
    ]
   },
@@ -58,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "zillow_id = result.zillow_id\n",
