--- a/Project_4/Project_4_LDA.ipynb
+++ b/Project_4/Project_4_LDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": 684,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "word_count = []\n",
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1125,7 +1127,9 @@
   {
    "cell_type": "code",
    "execution_count": 706,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "counts = df_0.groupby('topic')['description'].count()"
@@ -2906,7 +2910,9 @@
   {
    "cell_type": "code",
    "execution_count": 725,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_1.fillna(0, inplace=True)"
@@ -4841,7 +4847,9 @@
   {
    "cell_type": "code",
    "execution_count": 750,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_2.fillna(0, inplace=True)"
@@ -5068,7 +5076,9 @@
   {
    "cell_type": "code",
    "execution_count": 858,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cookie_cutter = df_2[df_2['topic'] == 5]"
@@ -5572,7 +5582,9 @@
   {
    "cell_type": "code",
    "execution_count": 844,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from functools import reduce\n",
